--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
 <body>
     <div class="container">
         <div class="row">
-            <div id="buttons-view" class="col-md-12"></div>
+            <div id="buttons-view" class="col-md-8"></div>
+            <div class="col-md-4">
+                <form id="gif-form">
+                    <label for="sport-input">Add a Sport/Team</label>
+                    <input type="text" id="sport-input"><br>
+
+                    <input id="add-sport" type="submit" value="Add a Sport/Team">
+                </form>
+            </div>
         </div>
+
+        <br>
     
         <div class="row">
-            <div id="gif-here" classs="col-md-8"></div>
-            <form id="gif-form" class="col-md-4">
-                <label for="sport-input">Add a Sport/Team</label>
-                <input type="text" id="sport-input"><br>
-
-                <input id="add-sport" type="submit" value="Add a Sport/Team">
-            </form>
+            <div id="gif-here" classs="col-md-12"></div>
         </div>
     </div>
 </body>
